<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderActivity">

    <TextView
        android:id="@+id/TextViewGreetings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/greetings"
        android:textAlignment="center"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/RadioGroupDrinks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/RadioGroupDrinks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/TextViewAdditives"
        app:layout_constraintTop_toBottomOf="@+id/TextViewGreetings">

        <RadioButton
            android:id="@+id/RadioButtonTea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/tea"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/RadioButtonCoffee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/coffee"
            android:textSize="20sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/TextViewAdditives"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/Additives"
        android:textAlignment="center"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/CheckBoxMilk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RadioGroupDrinks" />

    <CheckBox
        android:id="@+id/CheckBoxSugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/Sugar"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/CheckBoxMilk"
        app:layout_constraintEnd_toStartOf="@id/CheckBoxMilk"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/CheckBoxMilk" />

    <CheckBox
        android:id="@+id/CheckBoxMilk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/Milk"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/TextViewChooseType"
        app:layout_constraintEnd_toStartOf="@id/CheckBoxLemon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/CheckBoxSugar"
        app:layout_constraintTop_toBottomOf="@+id/TextViewAdditives" />

    <CheckBox
        android:id="@+id/CheckBoxLemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/Lemon"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/CheckBoxMilk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/CheckBoxMilk"
        app:layout_constraintTop_toTopOf="@id/CheckBoxMilk" />

    <TextView
        android:id="@+id/TextViewChooseType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/ChooseDrink"
        android:textAlignment="center"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/SpinnerTea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CheckBoxMilk" />

    <Spinner
        android:id="@+id/SpinnerTea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:entries="@array/types_of_tea"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/ButtonPlaceOrder"
        app:layout_constraintTop_toBottomOf="@+id/TextViewChooseType"
        tools:visibility="invisible" />

    <Spinner
        android:id="@+id/SpinnerCoffee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:entries="@array/types_of_coffee"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/ButtonPlaceOrder"
        app:layout_constraintTop_toBottomOf="@+id/TextViewChooseType"
        tools:visibility="invisible" />

    <Button
        android:id="@+id/ButtonPlaceOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/PlaceOrder"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SpinnerTea" />


</androidx.constraintlayout.widget.ConstraintLayout>