<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageCafeLogo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:contentDescription="@null"
        android:padding="36dp"
        app:srcCompat="@drawable/ic_cafe_logo" />

    <TextView
        android:id="@+id/TextViewWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="#318334"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/EditTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:autofillHints=""
        android:hint="@string/inputName_hint"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/EditTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:autofillHints=""
        android:hint="@string/inputPassword_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/ButtonEnter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24sp"
        android:layout_marginEnd="24sp"
        android:layout_marginBottom="24sp"
        android:text="@string/Enter_button"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>